--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.test {
+  color: blue;
+  font-size: 25px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
